<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:contentDescription="@string/product_img"
                    app:strokeColor="#FF404040"
                    app:strokeWidth="18dp" />

                <Space
                    android:layout_width="29dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/imgEndText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingStart="28dp"
                android:text=""
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="28dp"
                android:text=""
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nutriScoreTitle"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/nutriScoreImg"
                        android:layout_width="187dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/nutriScoreImg" />

                </LinearLayout>

                <Space
                    android:layout_width="35dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ecoScoreImg"
                        android:layout_width="71dp"
                        android:layout_height="57dp"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/ecoScoreImg" />

                    <TextView
                        android:id="@+id/ecoScoreTitle"
                        android:layout_width="69dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:text=""
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/diabetisInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="24sp"
                android:paddingStart="28dp"
                android:paddingEnd="28dp" />

            <TextView
                android:id="@+id/allergensInfo"
                android:layout_width="380dp"
                android:layout_height="69dp"
                android:layout_marginStart="30dp"
                android:text=""
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <TextView
                android:id="@+id/scoreDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:gravity="center"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/narrativeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24sp"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="sans-serif" />

            <Button
                android:id="@+id/replayNarrativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="Replay Narrative"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>